update image titles

--- a/index.html
+++ b/index.html
@@ -30,63 +30,51 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/001.jpg" alt="" /></a>
-							<h2>Casa de la monatña</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Realidad rural</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/002.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Pueblo olvidado</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/003.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>En el abandono</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/004.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Apacible</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/005.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>En la cumbre</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/006.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Templo en el altiplano</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/007.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>De retorno</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/008.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Despues de la lluvia</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/009.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>La fuente</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/010.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Ocaso</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/011.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Chicharrones dña Ana</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/012.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Casa de verano</h2>
 						</article>
 					</div>
 
